fixed alignement of img

--- a/css-flexbox_profile/css/styles.css
+++ b/css-flexbox_profile/css/styles.css
@@ -38,5 +38,8 @@ body {
 .profile {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.profile img {
+  align-self: center;
 }
